@@ -1,4 +1,5 @@
 2003-06-26  Tim Waugh  <twaugh@redhat.com>
+	* src/plugins/WebPage.py: Fix gendex creation.
 	* src/ImgManip.py: Seems to need the SIGCHLD handler resetting here
 	to prevent EINTR causing traceback.
 	* src/plugins/Ancestors.py: Cite sources.
